@@ -1,7 +1,6 @@
 DIST font-arial-cp1250.tar.bz2 249705 RMD160 a2fc7ae07b0d80936ea58e168e1047efccb9eb91 SHA1 ccf11dce5d0fb72fd3af97f788b7471cd0cd0b68 SHA256 423a07e780bb130cd8e4730715545c5d919c248dda595aab7a0a01de3c83fd12
 DIST font-arial-iso-8859-1.tar.bz2 234242 RMD160 666697cd5efd9387057a898c714175e7c2aacbcd SHA1 152c40bf20de34aa8802d7f80d34d673b0b67212 SHA256 9730f481764f367c9089d0166fb6ccf9148808ffbbfeca635cf0e6db75765d29
 DIST font-arial-iso-8859-2.tar.bz2 222208 RMD160 562d4d92c4f5f3d537340fde3ad8d1495ac41acb SHA1 7b99bbe0e9ba89a57eccbea8f93c453c4f268181 SHA256 71debfc960007c2f6242dfc91e8b1c005b30a99e129aeb00ab8c03f4371b41c1
-DIST svgalib_helper-1.9.17-mplayer.tar.gz 7583 RMD160 927ff34f187e4fa9528e2e48208173d98b3d1d1b SHA1 bf789706d1d79c695f781644c7ea6d57c3eed4c3 SHA256 a6f803f3df4cd4544751d3a3ee936a8bf0e20e32a452639b3f7c7d9e73e65938
-EBUILD mplayer-uau-9999.ebuild 23773 RMD160 da4ba60b1b9b8a5dc3d6cb06c2bc1201b3945583 SHA1 645be00b0b77ffce1ea3710376bee3effb1b3002 SHA256 18e16d6e28338ab3878fa5fbd5e9ee767b12ffe438be2db330764d3bf58548da
-MISC ChangeLog 614 RMD160 dcd10f8d8d30c049669fac7a643a3907e7cf4e23 SHA1 54e8b395334bd833672edfa60cdbc39e8636b332 SHA256 b90b94393135d0c7c29c7a1a0961317d052b2549d07039dc1fe26e144fb0d5b3
+EBUILD mplayer-uau-9999.ebuild 23509 RMD160 4e2ab54c7bfff0871bd7aea553d632725c1d9500 SHA1 0e1bbe8a274b81b82aaf8f10d835d912ad43d753 SHA256 0aa3f80c2272ca643c48ddddd960a9a7e773cc7abd39eb0533c647afb4f22b85
+MISC ChangeLog 741 RMD160 98641a2e7f095cada5bb9a0a154fcdb68f0d6973 SHA1 151ec089ed79d1dba38b5199685e9cee019268a3 SHA256 5188706de5304aa0e916203056b3bd7e3e80a80b4071816846df5b1ef4e72073
 MISC metadata.xml 4257 RMD160 65763489f8942ab76c3bef1f9a8b9d15e7f3cf9a SHA1 a9f74be76416fb7e67fe426fb607a9131f49d873 SHA256 37b8974580e603dc3881f2213cfbeffc184b1d27aa7660888c943b42ec1e6b03
