@@ -2,6 +2,9 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  22 Aug 2010; Nikoli <nikoli@lavabit.com> mplayer-uau-9999.ebuild:
+  fix src_unpack, remove USE svga, sync with mplayer-9999
+
   17 Jun 2010; Nikoli <nikoli@lavabit.com> mplayer-uau-9999.ebuild:
   fixed src_unpack, configure; added USE threads, cosmetics
 
